--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "react": "16.3.1",
     "react-dom": "16.3.1",
+    "react-input-mask": "^1.2.2",
     "react-scripts": "1.1.4"
   },
   "devDependencies": {},
