--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "react": "16.3.1",
     "react-dom": "16.3.1",
     "react-input-mask": "^1.2.2",
-    "react-scripts": "1.1.4"
+    "react-scripts": "1.1.4",
+    "validator": "^9.4.1"
   },
   "devDependencies": {},
   "scripts": {
