--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "keywords": [],
   "main": "src/index.js",
   "dependencies": {
+    "node-sass-chokidar": "^1.2.2",
     "react": "16.3.1",
     "react-dom": "16.3.1",
     "react-input-mask": "^1.2.2",
@@ -13,6 +14,9 @@
   },
   "devDependencies": {},
   "scripts": {
+    "build-css": "node-sass-chokidar src/ -o src/",
+    "watch-css":
+      "npm run build-css && node-sass-chokidar src/ -o src/ --watch --recursive",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
