--- a/package.json
+++ b/package.json
@@ -5,9 +5,13 @@
   "keywords": [],
   "main": "src/index.js",
   "dependencies": {
+    "draft-js": "^0.10.5",
+    "draftjs-to-html": "^0.8.4",
+    "html-to-draftjs": "^1.4.0",
     "node-sass-chokidar": "^1.2.2",
     "react": "16.3.1",
     "react-dom": "16.3.1",
+    "react-draft-wysiwyg": "^1.12.13",
     "react-input-mask": "^1.2.2",
     "react-scripts": "1.1.4",
     "validator": "^9.4.1"
@@ -15,8 +19,7 @@
   "devDependencies": {},
   "scripts": {
     "build-css": "node-sass-chokidar src/ -o src/",
-    "watch-css":
-      "npm run build-css && node-sass-chokidar src/ -o src/ --watch --recursive",
+    "watch-css": "npm run build-css && node-sass-chokidar src/ -o src/ --watch --recursive",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
